# Radiomics-vs-CNN

./: README.md  cnn_original.py  requirements.txt  setup.cfg
RadCNN/: __init__.py  cnn_original.py  modulo_0.py  modulo_1.py  original_cnn.py
RadCNN/cnn/: cnn_filtered.ipynb  cnn_filtered_aug.ipynb  cnn_filtered_stabilita.ipynb  cnn_original.ipynb  cnn_original_aug.ipynb  cnn_original_stabilita.ipynb
RadCNN/cnn/con_filtro/: __init1__.py  __init__.py  modulo_1.py  modulo_2.py  modulo_3.py
RadCNN/cnn/senza_filtro/: __init2__.py  __init__.py  modulo_1.py  modulo_2.py  modulo_4.py  modulo_5.py  modulo_7.py  modulo_8.py
RadCNN/radiomics/: dataset_filtered.m  radiomics.mlx
RadCNN/senza_filtro/: __init__.py  modulo_0.py  modulo_1.py
docs/: .readthedocs.yaml  api.rst  conf.py  index.rst  installing.rst
docs/source/: .readthedocs.yaml  api.rst  conf.py  index.rst  installing.rst
tests/: .travis.yml  test_cnn.py
