[metadata]
name = Radiomics-vs-CNN
authors = Giovanni Bitonti, Ana Pascual
version = 1.0
description-file = README.md
license_files = LICENSE.rst
url = 'https://github.com/bitgio/Radiomics-vs-CNN.git'
packages = find_packages('Rad-CNN')
packages_dir = find_packages('Rad-CNN')

[options]
install_requires =
	numpy
	scikit-learn
	matplotlib
	keras
	tensorflow